libreoffice (4:7.5.5~rc1-3) UNRELEASED; urgency=medium

  * debian/rules:
    - add more "no-make-check checks". sal, cppu(helper), comphelper, unoidl 

 -- Rene Engelhard <rene@debian.org>  Sun, 09 Jul 2023 23:28:21 +0200

libreoffice (4:7.5.5~rc1-2) experimental; urgency=medium

  * debian/rules:
    - actually enable cppunit also in the testtools/smoketest-only case
    - build some smoketest pre-requisites ourselves since they are not built
      even with module.allcheck (or .allbuild)
      in smoketest afterwards
    - build-depend on libcppunit-dev on all archs
    - clean up some make-check-only Build-Depends(-Arch)
    - also run the tests in pyuno since shipping a python3-uno which doesn't
      work is also bad
  * debian/rules, debian/tests/smoketest: run smoketest using make
    subsquentcheck in smoketest

 -- Rene Engelhard <rene@debian.org>  Sun, 02 Jul 2023 16:47:26 +0200

libreoffice (4:7.5.5~rc1-1) experimental; urgency=medium

  * New upstream release candidate

  * debian/rules:
    - again run full make check on amd64/arm64/riscv64(!) (and armhf); make fatal
    - only run testtools' bridgetest and "smoketest" as smoketest on all
      architectures except amd64/amd64/riscv64/armhf

 -- Rene Engelhard <rene@debian.org>  Sat, 01 Jul 2023 15:15:30 +0000

libreoffice (4:7.5.4-4) unstable; urgency=medium

  * debian/patches/adapt-for-new-carlito.diff: as name says; adapt one
    (and disable one for now since it has calculated values..) test which
    break with fonts-crosextra-carlito 20230309. Bump build-dependency.
    Revert all of this for bookworm-backports.

  * debian/rules:
    - use --disable-cve-tests on 32bit archs. Fails consistently there on one
      CVE which was a memory leak in tiff and a excpected failure here anyway.
      Fixed in tiff ages ago and we're not really supposed to test others' CVEs as
      we use external libs anyway
  * debian/rules, debian/control.in: 