@@ -1,0 +1,36 @@
+#!/bin/bash
+# autopkgtest check: Install a test extension shared
+# (c) 2017 Software in the Public Interest, Inc.
+# Authors: Rene Engelhard <rene@debian.org>
+
+set -e
+set -E
+
+if [ -n "$AUTOPKGTEST_TMP" ]; then
+        TMP=`mktemp -q -p $AUTOPKGTEST_TMP`
+else
+        TMP=`mktemp -q`
+fi
+
+
+echo
+echo "====== Extracting test extension ======"
+cd /usr/lib/libreoffice/share/extensions
+mkdir TestExtension
+unzip /usr/share/libreoffice/TestExtension.oxt
+
+echo
+echo "====== Show extension status ======"
+# does it list? For whatever reason unopkg leaves a stale .lock behind when
+# doing this grep directly on the output so do it on a tmpfile
+unopkg list --bundled | tee $TMP
+grep -q org.libreoffice.smoketest.TestExtension $TMP || exit 1
+
+grep -q com.sun.star.comp.Calc.NLPSolver $TMP || exit 1
+grep -q com.sun.wiki-publisher $TMP || exit 1
+
+grep -q org.openoffice.comp.pyuno.lightproof.oxt.lightproof_en $TMP || exit 1
+
+rm $TMP
+
+rm -f /usr/lib/libreoffice/share/extensions/TestExtension
